[package]
name = "ruft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
futures = "0.3.21"
tokio = {version = "1.17.0", features = [
	"time", "macros", "io-util", "rt-multi-thread", "io-std", "net",
]}
tarpc = {version = "0.28.0", features = ["full"]}
clap = { version = "3.1.9", features = ["derive"] }
serde = "1.0.136"
rand = "0.8.5"

[profile.release]
panic = 'abort'
